# e-sheet

./: .gitignore  README.md  README.zh-hans.md  package-lock.json  package.json  rollup.config.js  rollup.config.ts  tsconfig.json
examples/: dataJson.js  e-sheet.es.js  e-sheet.es.js.map  e-sheet.umd.js  e-sheet.umd.js.map  index.html
examples/css/: index.css
server/multi-person-collaboration/: Cargo.toml
server/multi-person-collaboration/src/: main.rs
src/: main.js  main.ts
src/component/content/: index.js
src/component/header/: index.js
src/component/side/: index.js
src/component/whole/: index.js
src/core/: canvas.js  canvas.ts  cell.ts  index.js  index.ts  initComponent.ts  sheet.ts
src/css/: book.scss  content.scss  contextmenu.scss  index.scss  loading.scss  setting.scss
src/decorators/: canvas.ts
src/image/: base64Img.js
src/plugins/book/: index.js
src/plugins/contextmenu/: index.js
src/plugins/drag/: index.js
src/plugins/input/: index.js
src/plugins/scroll/: index.js
src/plugins/select/: index.js
src/plugins/setting/: index.js
src/plugins/websocket/: index.js
src/store/: index.ts
src/type/: global.ts  options.ts  sheet.ts
src/types/: base.ts  canvas.ts  cell.ts  excel.ts  index.ts  sheet.ts
src/util/: canvas.js  cell.js  dom.js
src/utils/: index.ts
