[package]
name = "multi-person-collaboration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
tokio-tungstenite = "0.20.1"
futures-util = { version = "0.3" }
tokio = { version = "1.0.0",features = ["full"] }
tokio-stream = {version = "0.1.14"}
log = "0.4.17"
serde = {version="1",features=["derive"]}
serde_json = "1"